ci/vpc.yaml
---
## SMBA and DCS VPC stack
## VPC Stack which VPC, subnet, security groups
##

AWSTemplateFormatVersion: "2010-09-09"
Description: "smba-dcs VPC nested stack template"

Parameters:
  TemplateName:
    Type: String
    Description: Name used for different elements created.
    Default: 'smba-dcs-vpc'

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: "Name"
          Value: "SMBA-DCS-VPC"
  PrivateSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.0.0/24"
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "SMBA Application Private Subnet 1"
      AvailabilityZone:
        Fn::Select:
          - "0"
          - Fn::GetAZs:
              Ref: "AWS::Region"
  PrivateSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "SMBA Application Private Subnet 2"
      AvailabilityZone:
        Fn::Select:
          - "1"
          - Fn::GetAZs:
              Ref: "AWS::Region"
  PrivateSubnet3:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.2.0/24"
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "SMBA Database Private Subnet 1"
      AvailabilityZone:
        Fn::Select:
          - "0"
          - Fn::GetAZs:
              Ref: "AWS::Region"
  PrivateSubnet4:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.3.0/24"
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "SMBA Database Private Subnet 2"
      AvailabilityZone:
        Fn::Select:
          - "1"
          - Fn::GetAZs:
              Ref: "AWS::Region"

  PrivateSubnet5:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.4.0/24"
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "DCS Application Private Subnet 1"
      AvailabilityZone:
        Fn::Select:
          - "0"
          - Fn::GetAZs:
              Ref: "AWS::Region"
  PrivateSubnet6:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.5.0/24"
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "DCS Application Private Subnet 2"
      AvailabilityZone:
        Fn::Select:
          - "1"
          - Fn::GetAZs:
              Ref: "AWS::Region"
  PrivateSubnet7:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.6.0/24"
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "DCS Database Private Subnet 1"
      AvailabilityZone:
        Fn::Select:
          - "0"
          - Fn::GetAZs:
              Ref: "AWS::Region"
  PrivateSubnet8:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.7.0/24"
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "DCS Database Private Subnet 2"
      AvailabilityZone:
        Fn::Select:
          - "1"
          - Fn::GetAZs:
              Ref: "AWS::Region"
  RouteTablePrivate1:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "Private Route Table A"
  RouteTablePrivate1Association1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: "RouteTablePrivate1"
      SubnetId:
        Ref: "PrivateSubnet1"
  RouteTablePrivate1Association2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: "RouteTablePrivate1"
      SubnetId:
        Ref: "PrivateSubnet2"
  RouteTablePrivate2:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "Private Route Table B"
  RouteTablePrivate2Association1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: "RouteTablePrivate2"
      SubnetId:
        Ref: "PrivateSubnet3"
  RouteTablePrivate2Association2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: "RouteTablePrivate2"
      SubnetId:
        Ref: "PrivateSubnet4"
  RouteTablePrivate3:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "Private Route Table C"
  RouteTablePrivate3Association1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: "RouteTablePrivate3"
      SubnetId:
        Ref: "PrivateSubnet5"
  RouteTablePrivate3Association2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: "RouteTablePrivate3"
      SubnetId:
        Ref: "PrivateSubnet6"
  RouteTablePrivate4:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId:
        Ref: "VPC"
      Tags:
        - Key: "Name"
          Value: "Private Route Table D"
  RouteTablePrivate4Association1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: "RouteTablePrivate4"
      SubnetId:
        Ref: "PrivateSubnet7"
  RouteTablePrivate4Association2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId:
        Ref: "RouteTablePrivate4"
      SubnetId:
        Ref: "PrivateSubnet8"
  LogGroup:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      RetentionInDays: 365
  CloudWatchVPCRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service: 'vpc-flow-logs.amazonaws.com'
          Action: 'sts:AssumeRole'
      Policies:
      - PolicyName: 'flowlogs-policy'
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - 'logs:CreateLogStream'
            - 'logs:PutLogEvents'
            - 'logs:DescribeLogGroups'
            - 'logs:DescribeLogStreams'
            Resource: !GetAtt 'LogGroup.Arn'
  FlowLogs:
    Type: "AWS::EC2::FlowLog"
    Properties:
      ResourceType: "VPC"
      ResourceId:
        Ref: "VPC"
      TrafficType: "ALL"
      LogDestinationType: "cloud-watch-logs"
      LogGroupName: !Ref LogGroup
      DeliverLogsPermissionArn: !GetAtt 'CloudWatchVPCRole.Arn'
  
  KMSVPCEndpoint:
    Type: "AWS::EC2::VPCEndpoint"
    Properties:
      VpcEndpointType: "Interface"
      ServiceName:
        Fn::Join:
          - ""
          -
            - "com.amazonaws."
            - Ref: "AWS::Region"
            - ".kms"
      VpcId:
        Ref: "VPC"
      SecurityGroupIds:
        - Ref: "SgForKMSVPCEndpoint"

  SESVPCEndpoint:
    Type: "AWS::EC2::VPCEndpoint"
    Properties:
      VpcEndpointType: "Interface"
      ServiceName:
        Fn::Join:
          - ""
          -
            - "com.amazonaws."
            - Ref: "AWS::Region"
            - ".email-smtp"
      VpcId:
        Ref: "VPC"
      SecurityGroupIds:
        - Ref: "SgForSESVPCEndpoint"

  SecretsManagerVPCEndpoint:
    Type: "AWS::EC2::VPCEndpoint"
    Properties:
      VpcEndpointType: "Interface"
      ServiceName:
        Fn::Join:
          - ""
          -
            - "com.amazonaws."
            - Ref: "AWS::Region"
            - ".secretsmanager"
      VpcId:
        Ref: "VPC"
      SecurityGroupIds:
        - Ref: "SgForSecretsManagerVPCEndpoint"

  S3Endpoint:
    Type: "AWS::EC2::VPCEndpoint"
    Properties:
      VpcEndpointType: "Gateway"
      ServiceName:
        Fn::Join:
          - ""
          -
            - "com.amazonaws."
            - Ref: "AWS::Region"
            - ".s3"
      VpcId:
        Ref: "VPC"

  SgForKMSVPCEndpoint:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group to allow access to kms VPC Endpoint"
      SecurityGroupIngress:
        - CidrIp: !GetAtt VPC.CidrBlock
          IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "-1"
      VpcId:
        Ref: "VPC"
  
  SgForSecretsManagerVPCEndpoint:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group to allow access to SecretsManager VPC Endpoint"
      SecurityGroupIngress:
        - CidrIp: !GetAtt VPC.CidrBlock
          IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "-1"
      VpcId:
        Ref: "VPC"

  SgForSESVPCEndpoint:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group to allow access to SES VPC Endpoint"
      SecurityGroupIngress:
        - CidrIp: !GetAtt VPC.CidrBlock
          IpProtocol: "tcp"
          FromPort: "25"
          ToPort: "25"
        - CidrIp: !GetAtt VPC.CidrBlock
          IpProtocol: "tcp"
          FromPort: "465"
          ToPort: "465"
        - CidrIp: !GetAtt VPC.CidrBlock
          IpProtocol: "tcp"
          FromPort: "587"
          ToPort: "587"
        - CidrIp: !GetAtt VPC.CidrBlock
          IpProtocol: "tcp"
          FromPort: "2465"
          ToPort: "2465"
        - CidrIp: !GetAtt VPC.CidrBlock
          IpProtocol: "tcp"
          FromPort: "2587"
          ToPort: "2587"
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "-1"
      VpcId:
        Ref: "VPC"

  SMBAlambdaSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: "Security group for SMBA ETL lambda function"
      GroupName: SMBA-Lambda-SG
      Tags:
        - Key: "Name"
          Value: "SMBA-Lambda-SG"
      VpcId:
          Ref: "VPC"
  
  SMBAlambdaSGEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties: 
      CidrIp: "0.0.0.0/0"
      Description: "SMBAlambdaSGEgress Rule"
      GroupId: !Ref SMBAlambdaSG
      IpProtocol: "-1"

  DCSlambdaSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: "Security group for DCS lambda function"
      GroupName: DCS-Lambda-SG
      Tags:
        - Key: "Name"
          Value: "DCS-Lambda-SG"
      VpcId:
          Ref: "VPC"
  
  DCSlambdaSGEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties: 
      CidrIp: "0.0.0.0/0"
      Description: "DCSlambdaSGEgress Rule"
      GroupId: !Ref DCSlambdaSG
      IpProtocol: "-1"

Metadata: {}
Conditions: {}

Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref VPC
  VPCCidr:
    Description: VPC CIDR
    Value: !GetAtt VPC.CidrBlock
  SMBADbSubnet1:
    Description: SMBA Db Subnet 1
    Value: !Ref PrivateSubnet3
  SMBADbSubnet2:
    Description: SMBA Db Subnet 2
    Value: !Ref PrivateSubnet4
  DCSDbSubnet1:
    Description: DCS Db Subnet 1
    Value: !Ref PrivateSubnet7
  DCSDbSubnet2:
    Description: DCS Db Subnet 1
    Value: !Ref PrivateSubnet8
  SMBAlambdaSG:
    Description: SMBA lambda SG
    Value: !Ref SMBAlambdaSG
  DCSlambdaSG:
    Description: DCS lambda SG
    Value: !Ref DCSlambdaSG
  SMBALambdaSubnet1:
    Description: SMBA Lambda Subnet 1
    Value: !Ref PrivateSubnet1
  SMBALambdaSubnet2:
    Description: SMBA Lambda Subnet 2
    Value: !Ref PrivateSubnet2
  DCSLambdaSubnet1:
    Description: DCS Lambda Subnet 1
    Value: !Ref PrivateSubnet5
  DCSLambdaSubnet2:
    Description: DCS Lambda Subnet 1
    Value: !Ref PrivateSubnet6
